# Filecord

./: Cargo.toml  LICENSE  README.md  test
.github/workflows/: auto_release.yml
server/: Cargo.toml
server/src/: main.rs
server/www/: index.html
server/www/css/: compacted.css  tailwind.config.js  uncompressed.css
server/www/js/: main.js
src/: main.rs
src/server/: error.rs  get_metadata.rs  get_path.rs  messaging_platform.rs  mod.rs  new.rs  read.rs  send_messaging_platform.rs  send_page.rs  send_to_user.rs
src/utils/: asset.rs  decrypt_path.rs  mod.rs
www/: error.html  index.html  robots.txt
www/css/: compacted.css  uncompressed.css
www/image/favicon/: site.webmanifest
www/js/: main.js
