[package]
name = "sharex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = "3.2.6"
flate2 = "1.0.24"
lazy_static = "1.4.0"
pbr = "1.0.4"
serenity = {version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "1.14.0", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.0"
