[package]
name = "sharex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
clap = "3.2.6"
flate2 = "1.0.24"
pbr = "1.0.4"
rand = "0.8.5"
serde_json = "1.0.82"
ureq = "2.4.0"
urlencoding = "2.1.0"
