[package]
name = "server"
version = "0.1.31"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
flate2 = "1.0.24"
mime_guess = "2.0.4"
rust-embed = "6.4.0"
ureq = "2.4.0"
url = "2.2.2"
urlencoding = "2.1.0"
